deploy/kubernetes/00-namespace-serviceaccounts.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: containgo
  labels:
    kubernetes.io/metadata.name: containgo
    containgo.io/spire-identity: enabled
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
