deploy/kubernetes/13-order-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-client
  namespace: containgo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: order-client
  template:
    metadata:
      labels:
        app.kubernetes.io/name: order-client
        app.kubernetes.io/part-of: containgo
        containgo.io/spiffe: 'true'
    spec:
      serviceAccountName: order-client
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 15
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: order-client
        image: containgo/order-client:dev
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            cpu: 150m
            memory: 96Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - name: spiffe-workload-api
          mountPath: /spiffe-workload-api
          readOnly: true
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: spiffe-workload-api
        csi:
          driver: csi.spiffe.io
          readOnly: true
      - name: tmp
        emptyDir:
          sizeLimit: 32Mi
