deploy/kubernetes/16-democtl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: democtl
  namespace: containgo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: democtl
  template:
    metadata:
      labels:
        app.kubernetes.io/name: democtl
        app.kubernetes.io/part-of: containgo
        containgo.io/spiffe: 'true'
    spec:
      serviceAccountName: democtl
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 10
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: democtl
        image: containgo/democtl:dev
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 5m
            memory: 24Mi
          limits:
            cpu: 100m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - name: spiffe-workload-api
          mountPath: /spiffe-workload-api
          readOnly: true
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: spiffe-workload-api
        csi:
          driver: csi.spiffe.io
          readOnly: true
      - name: tmp
        emptyDir:
          sizeLimit: 32Mi
